// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using ejmabunda_web_api.Models;

#nullable disable

namespace ejmabunda_web_api.Migrations
{
    [DbContext(typeof(PortfolioContext))]
    partial class PortfolioContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("ejmabunda_web_api.Models.Certification", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("IssueDate")
                        .HasColumnType("datetime2");

                    b.Property<string>("IssuingOrganization")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Url")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Certifications");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.CertificationSkill", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("CertificationId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SkillId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.HasIndex("CertificationId");

                    b.HasIndex("SkillId");

                    b.ToTable("CertificationSkills");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Experience", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Employer")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime?>("EndDate")
                        .HasColumnType("datetime2");

                    b.Property<string>("JobTitle")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("StartDate")
                        .HasColumnType("datetime2");

                    b.HasKey("Id");

                    b.ToTable("Experiences");

                    b.HasData(
                        new
                        {
                            Id = new Guid("7bba2264-b1df-48af-bfed-f1ca1c27fe95"),
                            Description = "Mentored an incoming cohort of software engineering students alongside my own studies, supporting onboarding and technical growth.\r\nLed code pairing sessions and reviewed student submissions and commits, reinforcing software engineering best practices.\r\nFacilitated PechaKucha-style presentations to build mentees' communication and technical-storytelling skills.\r\nPartnered with the Student Performance team through standups and retrospectives to track mentee progress and escalate blockers.",
                            Employer = "WeThinkCode_",
                            EndDate = new DateTime(2025, 12, 10, 0, 0, 0, 0, DateTimeKind.Unspecified),
                            JobTitle = "Volunteer Technical Mentor",
                            StartDate = new DateTime(2025, 9, 1, 0, 0, 0, 0, DateTimeKind.Unspecified)
                        },
                        new
                        {
                            Id = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            Description = "Responsible for backend development and production support for an end-to-end recruitment platform, from vacancy creation through interviews, panel scoring, and offers, live in production.\r\nBuilt an automated interview-scheduling feature (C#/.NET, Ical.Net) that distributes scoring links and calendar invites to panel members automatically, eliminating manual coordination for every interview cycle.\r\nRefactored a legacy JavaScript codebase into a state-driven architecture and introduced its first automated test suite (Jest) — including full coverage of multi-tier approval logic — cutting regression risk on the platform's most business-critical workflow.\r\nHandle production support for a live, high-traffic system: diagnosed and resolved cross-stack issues including backend exceptions, async race conditions, and SQL correlated-subquery bugs. One fix resolved a document-classification defect that had been silently blocking candidates from submitting applications.\r\nBuilt backend API integrations connecting a candidate-facing portal to core CRM data.\r\nWrote and optimized SQL Server queries across recruitment data for reporting and root-cause investigations used in production incident response.\r\nDesigned cross-client HTML email templates (including Outlook/VML fallbacks) for automated candidate and panel communications.",
                            Employer = "Xiquel Group",
                            EndDate = new DateTime(2027, 1, 31, 0, 0, 0, 0, DateTimeKind.Unspecified),
                            JobTitle = "Junior Developer",
                            StartDate = new DateTime(2026, 2, 2, 0, 0, 0, 0, DateTimeKind.Unspecified)
                        });
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.ExperienceSkill", b =>
                {
                    b.Property<Guid>("ExperienceId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SkillId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("ExperienceId", "SkillId");

                    b.HasIndex("SkillId");

                    b.ToTable("ExperienceSkills");

                    b.HasData(
                        new
                        {
                            ExperienceId = new Guid("7bba2264-b1df-48af-bfed-f1ca1c27fe95"),
                            SkillId = new Guid("53b177d5-f4af-42b2-89fd-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("7bba2264-b1df-48af-bfed-f1ca1c27fe95"),
                            SkillId = new Guid("ea5743a7-0df7-4956-8a01-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("ff87c78a-3a06-4160-89e9-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("f12ba2b4-e019-4cdf-89ea-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("b3b43267-e5dd-4056-89ef-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("7154a018-bd1d-4e0d-89f1-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("da81dc14-30c0-4a77-89ee-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("1be17dbe-55a5-4e3b-89f9-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("24e71b43-a73b-4b25-89fa-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("79d1cdb5-2238-4cfa-89f2-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("ce5b9aae-4136-4004-89f4-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("78ce5d51-f878-43aa-89f5-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("a8bae3cb-b0b9-4353-89fb-08df07c4f846")
                        },
                        new
                        {
                            ExperienceId = new Guid("00116dbb-6810-421c-a703-aecfe9872f77"),
                            SkillId = new Guid("bce7603b-066c-4e06-89fc-08df07c4f846")
                        });
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Profile", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("int");

                    b.Property<string>("Headline")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Subtitle")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Profiles");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Headline = "Software Developer",
                            Subtitle = "Software Developer Developer with production experience architecting ASP.NET Core APIs, automated CI/CD pipelines, and cloud-native infrastructure on Azure. Proven ability to stabilize legacy systems, implement automated testing, and deliver full end-to-end enterprise features. Strong foundation in C#, SQL Server, and modern React/Next.js frontend architectures.",
                            Title = "Matimu Mabunda"
                        });
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Project", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Url")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Projects");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.ProjectSkill", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("ProjectId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SkillId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.HasIndex("ProjectId");

                    b.HasIndex("SkillId");

                    b.ToTable("ProjectSkills");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Qualification", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime?>("EndDate")
                        .HasColumnType("datetime2");

                    b.Property<string>("Institution")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("NqfLevel")
                        .HasColumnType("int");

                    b.Property<DateTime>("StartDate")
                        .HasColumnType("datetime2");

                    b.HasKey("Id");

                    b.ToTable("Qualifications");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.QualificationSkill", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("QualificationId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SkillId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.HasIndex("QualificationId");

                    b.HasIndex("SkillId");

                    b.ToTable("QualificationSkills");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.RefreshToken", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("RefreshTokenHash")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("RotatedAt")
                        .HasColumnType("datetime2");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.HasIndex("SessionId");

                    b.ToTable("RefreshTokens");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Session", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("ExpiresAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("RefreshTokenHash")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime?>("RevokedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateTime?>("RotatedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("Sessions");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Skill", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("SkillCategory")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.ToTable("Skills");

                    b.HasData(
                        new
                        {
                            Id = new Guid("ff87c78a-3a06-4160-89e9-08df07c4f846"),
                            Name = "C#",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("f12ba2b4-e019-4cdf-89ea-08df07c4f846"),
                            Name = ".NET",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("39da40c1-f90f-497c-89eb-08df07c4f846"),
                            Name = "ASP.NET Web API",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("5234d9f0-c4e1-4c88-89ec-08df07c4f846"),
                            Name = "REST",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("b60764e1-2f14-4cf5-89ed-08df07c4f846"),
                            Name = "JSON",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("da81dc14-30c0-4a77-89ee-08df07c4f846"),
                            Name = "T-SQL",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("b3b43267-e5dd-4056-89ef-08df07c4f846"),
                            Name = "JavaScript (ES6+)",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("b87602ae-295b-4eba-89f0-08df07c4f846"),
                            Name = "Python",
                            SkillCategory = 0
                        },
                        new
                        {
                            Id = new Guid("7154a018-bd1d-4e0d-89f1-08df07c4f846"),
                            Name = "SQL Server",
                            SkillCategory = 1
                        },
                        new
                        {
                            Id = new Guid("79d1cdb5-2238-4cfa-89f2-08df07c4f846"),
                            Name = "Process Automation",
                            SkillCategory = 1
                        },
                        new
                        {
                            Id = new Guid("a34486d1-1e35-4e6b-89f3-08df07c4f846"),
                            Name = "Data Modelling",
                            SkillCategory = 1
                        },
                        new
                        {
                            Id = new Guid("ce5b9aae-4136-4004-89f4-08df07c4f846"),
                            Name = "API Integrations",
                            SkillCategory = 1
                        },
                        new
                        {
                            Id = new Guid("78ce5d51-f878-43aa-89f5-08df07c4f846"),
                            Name = "Dynamics 365 / CRM",
                            SkillCategory = 2
                        },
                        new
                        {
                            Id = new Guid("b8e3d00e-79aa-4c23-89f6-08df07c4f846"),
                            Name = "Plugins",
                            SkillCategory = 2
                        },
                        new
                        {
                            Id = new Guid("9d2f95fb-2e19-4a8b-89f7-08df07c4f846"),
                            Name = "Execute Requests",
                            SkillCategory = 2
                        },
                        new
                        {
                            Id = new Guid("42745c25-fdae-41fc-89f8-08df07c4f846"),
                            Name = "Form scripting",
                            SkillCategory = 2
                        },
                        new
                        {
                            Id = new Guid("1be17dbe-55a5-4e3b-89f9-08df07c4f846"),
                            Name = "Jest",
                            SkillCategory = 3
                        },
                        new
                        {
                            Id = new Guid("24e71b43-a73b-4b25-89fa-08df07c4f846"),
                            Name = "Automated test suite design",
                            SkillCategory = 3
                        },
                        new
                        {
                            Id = new Guid("a8bae3cb-b0b9-4353-89fb-08df07c4f846"),
                            Name = "Incident triage",
                            SkillCategory = 3
                        },
                        new
                        {
                            Id = new Guid("bce7603b-066c-4e06-89fc-08df07c4f846"),
                            Name = "Root-cause analysis",
                            SkillCategory = 3
                        },
                        new
                        {
                            Id = new Guid("53b177d5-f4af-42b2-89fd-08df07c4f846"),
                            Name = "Code review",
                            SkillCategory = 3
                        },
                        new
                        {
                            Id = new Guid("9f1ac98a-d659-4bb5-afe8-b5b859516f59"),
                            Name = "AWS (CloudFormation, ECS, Fargate)",
                            SkillCategory = 4
                        },
                        new
                        {
                            Id = new Guid("2571f576-4632-40ef-89ff-08df07c4f846"),
                            Name = "CI/CD pipelines",
                            SkillCategory = 4
                        },
                        new
                        {
                            Id = new Guid("797d239c-f2db-49a8-8a00-08df07c4f846"),
                            Name = "Docker",
                            SkillCategory = 4
                        },
                        new
                        {
                            Id = new Guid("ea5743a7-0df7-4956-8a01-08df07c4f846"),
                            Name = "Git",
                            SkillCategory = 4
                        },
                        new
                        {
                            Id = new Guid("9353a742-5ebc-44bb-8a02-08df07c4f846"),
                            Name = "GitHub",
                            SkillCategory = 4
                        });
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.User", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("int");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Users");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            PasswordHash = "AQAAAAIAAYagAAAAELEppuCtBGV1aw7+mVELYbgacYd9Cxhl1bmc/bx98ylwC8NshEbcsXrDUzulLq7f5Q==",
                            Username = "admin"
                        });
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.CertificationSkill", b =>
                {
                    b.HasOne("ejmabunda_web_api.Models.Certification", "Certification")
                        .WithMany()
                        .HasForeignKey("CertificationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("ejmabunda_web_api.Models.Skill", "Skill")
                        .WithMany()
                        .HasForeignKey("SkillId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Certification");

                    b.Navigation("Skill");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.ExperienceSkill", b =>
                {
                    b.HasOne("ejmabunda_web_api.Models.Experience", "Experience")
                        .WithMany("ExperienceSkills")
                        .HasForeignKey("ExperienceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("ejmabunda_web_api.Models.Skill", "Skill")
                        .WithMany()
                        .HasForeignKey("SkillId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Experience");

                    b.Navigation("Skill");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.ProjectSkill", b =>
                {
                    b.HasOne("ejmabunda_web_api.Models.Project", "Project")
                        .WithMany()
                        .HasForeignKey("ProjectId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("ejmabunda_web_api.Models.Skill", "Skill")
                        .WithMany()
                        .HasForeignKey("SkillId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Project");

                    b.Navigation("Skill");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.QualificationSkill", b =>
                {
                    b.HasOne("ejmabunda_web_api.Models.Qualification", "Qualification")
                        .WithMany()
                        .HasForeignKey("QualificationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("ejmabunda_web_api.Models.Skill", "Skill")
                        .WithMany()
                        .HasForeignKey("SkillId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Qualification");

                    b.Navigation("Skill");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.RefreshToken", b =>
                {
                    b.HasOne("ejmabunda_web_api.Models.Session", null)
                        .WithMany("PreviousRefreshTokenHashes")
                        .HasForeignKey("SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Session", b =>
                {
                    b.HasOne("ejmabunda_web_api.Models.User", "User")
                        .WithMany("Sessions")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Experience", b =>
                {
                    b.Navigation("ExperienceSkills");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.Session", b =>
                {
                    b.Navigation("PreviousRefreshTokenHashes");
                });

            modelBuilder.Entity("ejmabunda_web_api.Models.User", b =>
                {
                    b.Navigation("Sessions");
                });
#pragma warning restore 612, 618
        }
    }
}
